deployment/infra/nginx/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: johnliutw/blog-nginx:$IMAGE_TAG
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"
              memory: "16Mi"
          livenessProbe:
            httpGet:
              path: /posts
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 2
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /posts
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 30
            failureThreshold: 1
            timeoutSeconds: 3
          ports:
            - containerPort: 80
